<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">健康桌面</string>
    <!--<string name="app_name_desc">健康桌面 - 你的健康管家</string>-->
    <string name="app_name_desc">科技提升健康品质</string>

    <string name="home_tabs_personal">个人健康</string>
    <string name="home_tabs_service">健康服务</string>
    <string name="home_tabs_setting">设置</string>
    <string name="home_tabs_app">应用</string>
    <string name="home_tabs_calendar">日历/通知</string>
    <string name="home_tabs_default_user">未登录</string>
    <string name="home_progressbar_index_health">健康指数</string>
    <string name="home_progressbar_default_index">暂无数据</string>
    <string name="home_progressbar_index_desc">查看详情</string>
    <string name="home_scrollbar_health_monitor">健康数据</string>
    <string name="home_scrollbar_health_plan">健康计划</string>
    <string name="home_scrollbar_more">更多</string>
    <string name="health_monitor_NIBP">血压</string>
    <string name="health_monitor_SPO">血氧</string>
    <string name="health_monitor_GLU">血糖</string>
    <string name="health_monitor_TEMP">体温</string>
    <string name="health_monitor_undetected">未检测</string>
    <string name="health_monitor_detected">点击检测</string>

    <string name="user_login">登录</string>
    <string name="user_register">注册</string>
    <string name="user_jump">跳过</string>
    <string name="user_phone_edit_hint">手机号码</string>
    <string name="user_pwd_edit_hint">密码</string>
    <string name="user_login_warning">账号或者密码不正确，请重新输入</string>
    <string name="user_forget_password">忘记密码？</string>
    <string name="user_pwd_rule_edit_hint">密码：6~15个英文字母和数字组合</string>
    <string name="user_register_verify_code">验证码</string>
    <string name="user_send_verify_code">获取验证码</string>
    <string name="user_phone_number_registered">手机号已被注册</string>
    <string name="user_info_no_empty">"%1$s不能为空"</string>

    <string name="empty">""</string>

    <string name="user_regain_verify">重新获取验证码</string>
    <string name="user_read_seconds">"重新获取%1$ds"</string>
    <string name="user_pwd_regex_desc">密码不符合“至少六个字符，至少一个字母和一个数字，且不包含特殊字符”的组成规则</string>
    <string name="user_set_avatar">设置头像</string>
    <string name="user_profile">填写个人信息</string>
    <string name="user_anamnesis">既往病史</string>
    <string name="user_create_family">创建家庭</string>
    <string name="user_family_name">家庭名称：</string>
    <string name="user_family_desc">可以选择以下家庭名称：</string>
    <string name="user_input_family_name">请输入你的家庭名称</string>
    <string name="user_name">姓名</string>
    <string name="user_nickname">昵称</string>
    <string name="user_sex">性别</string>
    <string name="user_birthday">出生日期</string>
    <string name="user_default_birthday">"1990-01-01"</string>
    <string name="user_weight">"体重：%1$skg"</string>
    <string name="user_height">"身高：%1$dcm"</string>
    <string name="user_next_step">下一步</string>
    <string name="user_finish">完成</string>
    <string name="user_login_during">正在登录...</string>
    <string name="user_login_success">登录成功</string>
    <string name="user_login_failed">登录失败</string>
    <string name="user_login_phone_or_pwd_error">登录失败，手机号码或者密码错误</string>
    <string name="user_register_during">正在注册...</string>
    <string name="user_register_success">注册成功</string>
    <string name="user_register_failed">注册失败</string>
    <string name="user_loading">正在加载...</string>
    <string name="user_upload_data">上传数据</string>
    <string name="user_upload_data_during">正在上传数据，请稍候...</string>
    <string name="user_upload_data_cancel">取消上传</string>
    <string name="user_upload_data_retry">重新上传</string>
    <string name="user_upload_data_completed">上传成功</string>
    <string name="user_upload_data_failed">上传失败，请重试</string>
    <string name="user_info_name_incomplete">姓名和昵称至少填一个</string>
    <string name="user_info_w_h_no_empty">"身高体重不能为空"</string>
    <string name="user_confirm">确定</string>

    <string name="user_select_family">选择家庭</string>
    <string name="user_info_store">积分商城</string>
    <string name="user_info_phone">手机号码</string>
    <string name="user_info_phone_unbind">未绑定</string>
    <string name="user_info_basic">个人信息</string>
    <string name="user_info_permission">权限设置</string>
    <string name="user_info_about">关于我们</string>
    <string name="user_switch_family">切换家庭</string>
    <string name="user_exit">退出</string>
    <string name="user_info_phone_bind">绑定手机号码</string>
    <string name="user_info_phone_update">更改手机号码</string>
    <string name="user_bind">绑定</string>
    <string name="user_bind_phone">当前绑定的手机号码</string>
    <string name="user_update">更改</string>
    <string name="user_wait_during">请稍候...</string>
    <string name="user_update_info">修改信息</string>
    <string name="user_bind_success">绑定成功</string>
    <string name="user_bind_failed">绑定失败</string>
    <string name="user_update_success">更新成功</string>
    <string name="user_update_failed">更新失败</string>
    <string name="user_known_history_ills_desc">已有病史</string>
    <string name="user_unknown_history_ills_desc">请将以下符合的病例，更新到您的既往病史中</string>
    <string name="user_no_history_ills">无疾病史</string>
    <string name="user_update_history_ills">更新病史</string>
    <string name="user_no_data_update">没有要提交的内容</string>
    <string name="user_switch_family_warn">没有可选择的家庭</string>
    <string name="user_select_family_warn">请先选择一个家庭</string>
    <string name="user_register_new_member">注册新成员</string>

    <string name="copyrighted_work">上海常仁信息科技有限公司\n©2019 Shanghai Changren Information Technology Co., Ltd.</string>
    <string name="upgrade_check">检查更新</string>
    <string name="upgrade_title">发现新版本</string>
    <string name="upgrade_cancel">暂不更新</string>
    <string name="upgrade_update">立即更新</string>
    <string name="upgrade_latest">已经是最新版本</string>
    <string name="upgrade_current_version">"Version %1$s"</string>
    <string name="cancel">取消</string>
    <string name="upgrade_update_progress">"下载进度：%1$d%%"</string>

    <string name="no_network">网络异常，请检查网络后重试</string>
    <string name="program_error">程序内部错误</string>

    <string name="no_healthplan_app">您还未安装此应用或者未登录</string>
    <string name="plan_line_GLU">血糖检测</string>
    <string name="plan_line_BP">血压检测</string>
    <string name="plan_line_weight">体重检测</string>
    <string name="plan_line_remind_medication">服药提醒</string>

    <string name="plan_remind_str1">请在 %1$s 完成 %2$s </string>
    <string name="plan_remind_str2">没有更多计划了</string>
    <string name="default_no_plan_line">健康计划事件获取失败</string>
    <string name="default_no_news">没有更多资讯信息</string>
    <string name="health_news">健康资讯</string>
    <string name="home_banner_plan_now_todo">当前应该做什么</string>
    <string name="home_banner_plan_next_todo">下一步应该做什么</string>


</resources>
