<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:background="@drawable/user_dialog_bg_shape_white_corners_10"
    android:orientation="vertical">
    
    <android.support.v4.widget.ContentLoadingProgressBar
        android:id="@+id/uploading"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        style="@style/Progress.Circular"/>

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:lineSpacingExtra="5dp"
        android:text="@string/user_upload_data_during"
        android:maxLines="3"
        style="@style/text_MD_grey"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        android:gravity="bottom|center"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:padding="10dp"
            android:background="@drawable/user_btn_bg_selector_pressed"
            android:text="@string/user_upload_data_cancel"
            style="@style/text_MD_white"/>

        <TextView
            android:id="@+id/tv_retry"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/tv_confirm"
            android:layout_marginEnd="64dp"
            android:gravity="center"
            android:padding="10dp"
            android:background="@drawable/user_btn_bg_selector_pressed"
            android:text="@string/user_upload_data_retry"
            style="@style/text_MD_white"
            android:visibility="gone"/>

    </RelativeLayout>

</LinearLayout>