<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:gravity="center_vertical"
        android:background="@drawable/user_avatar_bg"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/include_user_header_profile"/>

    </android.support.v7.widget.Toolbar>

    <com.changren.android.launcher.user.ui.widget.HorizontalScaleScrollView
        android:id="@+id/weight_scale"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:lf_scale_view_height="@dimen/dp_15"
        app:lf_scale_view_margin="@dimen/dp_15"
        app:lf_scale_view_max="2000"
        app:lf_scale_view_min="250" />

    <com.changren.android.launcher.user.ui.widget.VerticalScaleScrollView
        android:id="@+id/height_scale"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/weight_scale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:lf_scale_view_height="@dimen/dp_15"
        app:lf_scale_view_margin="@dimen/dp_15"
        app:lf_scale_view_max="250"
        app:lf_scale_view_min="90" />

    <ImageView
        android:id="@+id/iv_sex_whole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:contentDescription="@string/empty"
        app:layout_constraintBottom_toTopOf="@+id/weight_scale"
        app:layout_constraintEnd_toStartOf="@+id/height_scale"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_male_whole" />

    <TextView
        android:id="@+id/tv_weight"
        style="@style/text_LG_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="@+id/iv_sex_whole"
        app:layout_constraintEnd_toStartOf="@+id/iv_sex_whole"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/user_weight" />

    <TextView
        android:id="@+id/tv_height"
        style="@style/text_LG_grey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_12"
        tools:text="@string/user_height"
        app:layout_constraintEnd_toStartOf="@+id/height_scale"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/btn_next"
        style="@style/Button.Rounded.Corner50"
        android:layout_width="@dimen/dp_550"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_30"
        android:text="@string/user_next_step"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>