<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="550dp"
    android:layout_height="wrap_content"
    android:minHeight="390dp"
    android:background="@drawable/user_dialog_bg_shape_white_corners_10">

    <TextView
        android:id="@+id/tv_title"
        style="@style/text_LG_blue"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:text="@string/upgrade_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/divider_line_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <ScrollView
        android:id="@+id/sv_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        app:layout_constraintBottom_toTopOf="@+id/space2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/space"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <TextView
            android:id="@+id/tv_content"
            style="@style/text_LG_grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="更新版本：1.1.0\n1.修复部分必现bug\n2.美化UI界面\n3.杀了几个美工祭天"
            android:gravity="start"
            android:lineSpacingMultiplier="1.2"/>

    </ScrollView>

    <View
        android:id="@+id/space2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/divider_line_color"
        app:layout_constraintBottom_toTopOf="@+id/tv_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="0dp"
        android:layout_height="80dp"
        style="@style/text_LG_blue"
        android:text="@string/upgrade_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_update"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_update"
        android:layout_width="0dp"
        android:layout_height="80dp"
        style="@style/text_LG_blue"
        android:text="@string/upgrade_update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_cancel" />

    <View
        android:id="@+id/space3"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:background="@color/divider_line_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space2" />

</android.support.constraint.ConstraintLayout>